# arcade-game

./: Makefile  README.md  pyproject.toml
app/: alien.py  alien_manager.py  bullet.py  game.py  game_renderer.py  player.py  power_up.py  power_up_manager.py  score_manager.py  settings.py
tests/: test_alien.py  test_alien_manager.py  test_bullet.py  test_game_renderer.py  test_player.py  test_score_manager.py
