[tool.poetry]
name = "arcade-game"
version = "0.1.0"
description = ""
authors = ["Tikaram Mardi <tikarammardi007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.poetry.dev-dependencies]
pyinstaller = { version = "^6.11.0", python = ">=3.8,<3.14" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
